--- a/程序说明.md
+++ b/程序说明.md
@@ -4,13 +4,13 @@
 
 设备环境
 
-![image-20221201023800496](C:\Users\hp\AppData\Roaming\Typora\typora-user-images\image-20221201023800496.png)
+![image-20221201023800496](./image-20221201023800496.png)
 
 IDE：Clion 2021.3（自带cmake配置工具）
 
 ### 目前效果：
 
-![image-20221201023957044](C:\Users\hp\AppData\Roaming\Typora\typora-user-images\image-20221201023957044.png)
+![image-20221201023957044](.\image-20221201023957044.png)
 
 ### 优化策略：
 
